--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,12 +7,14 @@ oracledb:
   user: oracle
   group: oinstall
   db_name: "{{db_name| default('orcl')}}"
-  sid: "{{sid| default('orcl')}}"
+  sid: "{{db_name| default('orcl')}}"
   db_domain: dcteam.local
   db_pass: "{{sys_password | default('SysPassDcteam2020')}}"
   db_storage_type: 'FS'
   rsp_template: 'dbca.rsp.{{ oracle_version }}'
   db_archive_mode: "{{db_archive_mode | default('no_archivelog')}}"
+  datafile_destination: "{{datafile_destination}}"
+  recovery_destination: "{{recovery_destination}}"
   rsp_file: db.rsp
   db_template: db_fs.dbc
   template_dir: /tmp
@@ -21,4 +23,4 @@ oracledb:
      - {name: "sga_max_size", value: "1100MB"} 
      - {name: "pga_aggregate_target", value: "200MB"}
      - {name: processes, value: 300}
-     -  {name: cursor_sharing, value: true}
+     - {name: cursor_sharing, value: force}
