--- a/vars/main.yml
+++ b/vars/main.yml
@@ -8,7 +8,7 @@ oracledb:
   group: oinstall
   db_name: "{{db_name| default('orcl')}}"
   sid: "{{db_name| default('orcl')}}"
-  db_domain: dcteam.local
+  db_domain: 'cb.sar'
   db_pass: "{{sys_password | default('SysPassDcteam2020',true)}}"
   db_storage_type: 'FS'
   rsp_template: 'dbca.rsp.{{ oracle_version }}'
