--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,7 +14,7 @@ oracledb:
   rsp_template: 'dbca.rsp.{{ oracle_version }}'
   db_archive_mode: "{{db_archive_mode | default('no_archivelog')}}"
   datafile_destination: "{{datafile_destination | default('default',true)}}"
-  recovery_destination: "{{recovery_destination | default('default'),true}}"
+  recovery_destination: "{{recovery_destination | default('default',true)}}"
   rsp_file: db.rsp
   db_template: db_fs.dbc
   template_dir: /tmp
